# super-crunch

./: .env.example  .gcloudignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
dev/: publisher.py  subscriber.py
queries/: delete_all_rows.sql  get_fountain_hills.sql  get_fountain_hills_and_relocation.sql  get_outside_brokerage_agent.sql  get_relocation.sql  insert_indexes.sql
schema/: closed.txt  forecast.txt  indexes.txt  office.txt  pending.txt
scripts/env/: example.sh
scripts/functions-framework/: start.sh
scripts/google-cloud/cronjob/: create.sh  delete.sh  edit.sh
scripts/google-cloud/emulators/pubsub/: create_subscription.sh  create_topic.sh  env_init.sh  publish_topic.sh  start.sh
scripts/google-cloud/functions/: delete.sh  publish.sh
scripts/google-cloud/pubsub/: create.sh  delete.sh
scripts/test/: env.sh
src/super_crunch/: __init__.py  constants.py  log.py
src/super_crunch/functions/: transactions.py  transactions_pubsub.py
src/super_crunch/utils/: columns.py  endpoint.py  fields.py  replace.py  transactions.py  upload.py
tests/: test_endpoint.py  test_transactions.py  test_upload.py
