[project]
name = "super_crunch"
version = "0.1.0"
authors = [{ name="Robert Quinn", email="robert.quinn@russlyon.com" },]
description = "A Cloud Function that updates a BigQuery Table with csv data loaded from an api endpoint"
readme = "README.md"
requires-python = ">=3.11.3"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/robquinn/super-crunch"
"Bug Tracker" = "https://github.com/robquinn/super-crunch/issues"

[tool.pytest.ini_options]
pythonpath = [
"src"
]
addopts = [
"--import-mode=importlib",
]
